--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
         <script src="https://cdn.jsdelivr.net/npm/vega@5.20.2"></script>
         <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.1.0"></script>
         <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.17.0"></script>
+        <script src="https://cdn.tailwindcss.com"></script>
 
         <title>Tay Tshung Wen FIT3179 Data Viz 2 - Malaysia General Election 2022</title>
     </head>
-    <body>
+    <body class="w-svw h-svh">
         <script type="text/javascript">
             var vg_1 = './map.vg.json';
             vegaEmbed('#map', vg_1, { actions: false })
@@ -28,9 +29,24 @@
             vegaEmbed('#age', vg_3, { actions: false })
                 .then(function (result) {})
                 .catch(console.error);
+            var vg_4 = './type.vg.json';
+            vegaEmbed('#type', vg_4, { actions: false })
+                .then(function (result) {})
+                .catch(console.error);
         </script>
-        <div id="map"></div>
-        <div id="majority_by_state"></div>
-        <div id="age"></div>
+        <div
+            style="
+                height: inherit;
+                grid-template-areas: 'map map map' 'chart1 chart2 chart3';
+                grid-template-columns: 1fr 1fr 1fr;
+                grid-template-rows: 1fr calc(24 * 16px);
+            "
+            class="grid m-auto p-16 w-[1920px] gap-4 grid-rows-3"
+        >
+            <div class="h-full" style="grid-area: map" id="map"></div>
+            <div class="h-full" style="grid-area: chart1" id="majority_by_state"></div>
+            <div class="h-full" style="grid-area: chart2" id="age"></div>
+            <div class="h-full" style="grid-area: chart3" id="type"></div>
+        </div>
     </body>
 </html>
