--- a/index.html
+++ b/index.html
@@ -29,16 +29,12 @@
             vegaEmbed('#age', vg_3, { actions: false })
                 .then(function (result) {})
                 .catch(console.error);
-            var vg_4 = './type.vg.json';
-            vegaEmbed('#type', vg_4, { actions: false })
-                .then(function (result) {})
-                .catch(console.error);
         </script>
         <div
             style="
                 height: inherit;
-                grid-template-areas: 'map map map' 'chart1 chart2 chart3';
-                grid-template-columns: 1fr 1fr 1fr;
+                grid-template-areas: 'map map ' 'chart1 chart2 ';
+                grid-template-columns: 1fr 1fr;
                 grid-template-rows: 1fr calc(24 * 16px);
             "
             class="grid m-auto p-16 w-[1920px] gap-4 grid-rows-3"
@@ -46,7 +42,6 @@
             <div class="h-full" style="grid-area: map" id="map"></div>
             <div class="h-full" style="grid-area: chart1" id="majority_by_state"></div>
             <div class="h-full" style="grid-area: chart2" id="age"></div>
-            <div class="h-full" style="grid-area: chart3" id="type"></div>
         </div>
     </body>
 </html>
